--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         {
             "name": "Jeffrey Way",
             "email": "jeffrey@jeffrey-way.com",
-            "homepage": "http://jeffrye-way.com",
+            "homepage": "http://jeffrey-way.com",
             "role": "Developer"
         }
     ],
